--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.24.0",
     "graphql": "^15.5.0",
+    "material-ui-image": "^3.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently --kill-others \"yarn watch-generate\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -60,6 +62,7 @@
     "@graphql-codegen/typescript-graphql-files-modules": "1.18.1",
     "@graphql-codegen/typescript-operations": "1.18.0",
     "@graphql-codegen/typescript-react-apollo": "2.2.5",
+    "@types/styled-components": "^5.1.10",
     "@typescript-eslint/parser": "^4.26.1",
     "commitizen": "^4.2.4",
     "concurrently": "^6.2.0",
