--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "axios": "^0.21.1",
+    "date-fns": "^2.22.1",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.24.0",
     "graphql": "^15.5.0",
+    "lodash.get": "^4.4.2",
+    "lodash.includes": "^4.3.0",
     "material-ui-image": "^3.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -63,6 +67,8 @@
     "@graphql-codegen/typescript-graphql-files-modules": "1.18.1",
     "@graphql-codegen/typescript-operations": "1.18.0",
     "@graphql-codegen/typescript-react-apollo": "2.2.5",
+    "@types/lodash.get": "^4.4.6",
+    "@types/lodash.includes": "^4.3.6",
     "@types/styled-components": "^5.1.10",
     "@typescript-eslint/parser": "^4.26.1",
     "commitizen": "^4.2.4",
